--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
-  background-color: Yellow;
+  background-color: lightyellow;
 }
 h1 {
-  color: green;
+  color: red;
 }
 p {
-  color: violet;
+  color: black;
 }
